--- a/index.html
+++ b/index.html
@@ -1,86 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Frontend Mentor | Easybank landing page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
 
-  Home
-  About
-  Contact
-  Blog
-  Careers
+  <header>
+    <!-- Nav Section -->
+    <nav>
+      <img class="nav__logo" src="imgs/logo.svg" alt="Easybank Logo">
+      <!-- Mobile Nav -->
+      <button class="hamburger__btn"></button>
+      <!-- Desktop Nav -->
+      <ul class="nav__links">
+        <li class="nav__link">Home</li>
+        <li class="nav__link">About</li>
+        <li class="nav__link">Contact</li>
+        <li class="nav__link">Blog</li>
+        <li class="nav__link">Careers</li>
+      </ul>
+      <button class="btn" href="#">Request Invite</button>
+    </nav>
+    <!-- Hero Section -->
+    <img class="hero__img" src="imgs/image-mockups.png" alt="Phone Mockup">
+    <h1 class="hero__header">Next generation digital banking</h1>
+    <p class="hero__body">Take your financial life online. Your Easybank account will be a one-stop-shop
+      for spending, saving, budgeting, investing, and much more.</p>
+    <button class="btn" href="#">Request Invite</button>
+  </header>
 
-  Request Invite
+  <!-- Features Section -->
+  <section class="features">
+    <h2 class="features__header">Why choose Easybank?</h2>
+    <p class="features__body">We leverage Open Banking to turn your bank account into your financial hub. Control your finances like never before.</p>
+
+    <img src="imgs/icon-online.svg" alt="">
+    <h3 class="features__item-header">Online Banking</h3>
+    <p class="features__item-body">Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.</p>
+
+    <img src="imgs/icon-budgeting.svg" alt="">
+    <h3 class="features__item-header">Simple Budgeting</h3>
+    <p class="features__item-body">See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.</p>
+
+    <img src="imgs/icon-onboarding.svg" alt="">
+    <h3 class="features__item-header">Fast Onboarding</h3>
+    <p class="features__item-body">We don’t do branches. Open your account in minutes online and start taking control of your finances right away.</p>
+
+    <img src="imgs/icon-api.svg" alt="">
+    <h3 class="features__item-header">Open API</h3>
+    <p class="features__item-body">Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier.</p>
+  </section>
+
+  <!-- Article Section -->
+  <article class="Articles">
+    <h2 class="article__header">Latest Articles</h2>
+
+    <img class="article__img" src="imgs/image-currency.jpg" alt="Currency">
+    <small class="article__author">By Claire Robinson</small>
+    <h4 class="article__item-header">Receive money in any currency with no fees</h4>
+    <p class="article__item-body">The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
+
+    <img class="article__img" src="imgs/image-restaurant.jpg" alt="Restaurant">
+    <small class="article__author">By Wilson Hutton</small>
+    <h4 class="article__item-header">Treat yourself without worrying about money</h4>
+    <p class="article__item-body">Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
+
+    <img class="article__img" src="imgs/image-plane.jpg" alt="Plane">
+    <small class="article__author">By Wilson Hutton</small>
+    <h4 class="article__item-header">Take your Easybank card wherever you go</h4>
+    <p class="article__item-body">We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
+
+    <img class="article__img" src="imgs/image-confetti.jpg" alt="Confetti">
+    <small class="article__author">By Claire Robinson</small>
+    <h4 class="article__item-header">Our invite-only Beta accounts are now live!</h4>
+    <p class="article__item-body">After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
+  </article>
+
+  <!-- Footer Section -->
+  <footer class="footer">
+
+  </footer>
 
 
-
-  Next generation digital banking
-
-  Take your financial life online. Your Easybank account will be a one-stop-shop 
-  for spending, saving, budgeting, investing, and much more.
-
-  Request Invite
-
-
-
-  Why choose Easybank?
-
-  We leverage Open Banking to turn your bank account into your financial hub. Control 
-  your finances like never before.
-
-  Online Banking
-  Our modern web and mobile applications allow you to keep track of your finances 
-  wherever you are in the world.
-
-  Simple Budgeting
-  See exactly where your money goes each month. Receive notifications when you’re 
-  close to hitting your limits.
-
-  Fast Onboarding
-  We don’t do branches. Open your account in minutes online and start taking control 
-  of your finances right away.
-
-  Open API
-  Manage your savings, investments, pension, and much more from one account. Tracking 
-  your money has never been easier.
-
-  
-
-  Latest Articles
-
-  By Claire Robinson
-  Receive money in any currency with no fees
-  The world is getting smaller and we’re becoming more mobile. So why should you be 
-  forced to only receive money in a single …
-
-  By Wilson Hutton
-  Treat yourself without worrying about money
-  Our simple budgeting feature allows you to separate out your spending and set 
-  realistic limits each month. That means you …
-
-  By Wilson Hutton
-  Take your Easybank card wherever you go
-  We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
-  while you’re abroad. We’ll even show you …
-
-  By Claire Robinson
-  Our invite-only Beta accounts are now live!
-  After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
-  It’s easy to request an invite through the site ...
-
-  
 
   About Us
   Contact
@@ -92,10 +100,12 @@
   Request Invite
 
   © Easybank. All Rights Reserved
-  
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="js/script.js"></script>
 </body>
+
 </html>
