--- a/index.html
+++ b/index.html
@@ -14,31 +14,36 @@
 <body>
 
   <header class="header">
-    <!-- Nav Section -->
-    <nav class="nav container">
-      <img class="nav__logo" src="imgs/logo.svg" alt="Easybank Logo">
-      <!-- Mobile Nav -->
-      <img class="nav__hamburger" src="imgs/icon-hamburger.svg" alt="" srcset="">
-      <!-- Desktop Nav -->
-      <ul class="nav__links">
-        <li class="nav__link"><a href="#">Home</a></li> 
-        <li class="nav__link"><a href="">About</a></li> 
-        <li class="nav__link"><a href="">Contact</a></li>
-        <li class="nav__link"><a href="">Blog</a></li>
-        <li class="nav__link"><a href="">Careers</a></li>
-      </ul>
-      <button class="btn nav__btn" href="www.google.co.uk">Request Invite</button>
+    <div class="overlay hide" id="overlay"></div> 
+    <!-- Nav Section -->   
+    <nav class="nav container">       
+        <img class="nav__logo" src="imgs/logo.svg" alt="Easybank Logo">    
+        <!-- Mobile Nav -->
+        <img class="nav__hamburger-open" id="hamburger-btn-open" src="imgs/icon-hamburger.svg" alt="Hamburger Menu">
+        <img class="nav__hamburger-close hide" id="hamburger-btn-close" src="imgs/icon-close.svg" alt="Hamburger Menu">
+        <!-- Desktop Nav -->
+        <ul class="nav__links hide" id="nav-links">
+          <li class="nav__link"><a href="#">Home</a></li> 
+          <li class="nav__link"><a href="">About</a></li> 
+          <li class="nav__link"><a href="">Contact</a></li>
+          <li class="nav__link"><a href="">Blog</a></li>
+          <li class="nav__link"><a href="">Careers</a></li>
+        </ul>
+        <button class="btn nav__btn" href="www.google.co.uk">Request Invite</button>  
     </nav>
+
     <!-- Hero Section -->
-    <img class="hero__img" src="imgs/image-mockups.png" alt="Phone Mockup">
-    <h1 class="hero__header">Next generation digital banking</h1>
-    <p class="hero__body">Take your financial life online. Your Easybank account will be a one-stop-shop
-      for spending, saving, budgeting, investing, and much more.</p>
-    <button class="btn" href="#">Request Invite</button>
+    <section class="hero container">
+      <img class="hero__img img" src="imgs/image-mockups.png" alt="Phone Mockup">
+      <h1 class="hero__header">Next generation digital banking</h1>
+      <p class="hero__body">Take your financial life online. Your Easybank account will be a one-stop-shop
+        for spending, saving, budgeting, investing, and much more.</p>
+      <button class="btn" href="#">Request Invite</button>
+    </section>
   </header>
 
   <!-- Features Section -->
-  <section class="features">
+  <section class="features container">
     <h2 class="features__header">Why choose Easybank?</h2>
     <p class="features__body">We leverage Open Banking to turn your bank account into your financial hub. Control your finances like never before.</p>
 
@@ -60,32 +65,32 @@
   </section>
 
   <!-- Article Section -->
-  <article class="Articles">
+  <article class="Articles container">
     <h2 class="article__header">Latest Articles</h2>
 
-    <img class="article__img" src="imgs/image-currency.jpg" alt="Currency">
+    <img class="article__img img" src="imgs/image-currency.jpg" alt="Currency">
     <small class="article__author">By Claire Robinson</small>
     <h4 class="article__item-header">Receive money in any currency with no fees</h4>
     <p class="article__item-body">The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
 
-    <img class="article__img" src="imgs/image-restaurant.jpg" alt="Restaurant">
+    <img class="article__img img" src="imgs/image-restaurant.jpg" alt="Restaurant">
     <small class="article__author">By Wilson Hutton</small>
     <h4 class="article__item-header">Treat yourself without worrying about money</h4>
     <p class="article__item-body">Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
 
-    <img class="article__img" src="imgs/image-plane.jpg" alt="Plane">
+    <img class="article__img img" src="imgs/image-plane.jpg" alt="Plane">
     <small class="article__author">By Wilson Hutton</small>
     <h4 class="article__item-header">Take your Easybank card wherever you go</h4>
     <p class="article__item-body">We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
 
-    <img class="article__img" src="imgs/image-confetti.jpg" alt="Confetti">
+    <img class="article__img img" src="imgs/image-confetti.jpg" alt="Confetti">
     <small class="article__author">By Claire Robinson</small>
     <h4 class="article__item-header">Our invite-only Beta accounts are now live!</h4>
     <p class="article__item-body">After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
   </article>
 
   <!-- Footer Section -->
-  <footer class="footer">
+  <footer class="footer container">
     <img class="footer__logo" src="imgs/logo.svg" alt="">
     <div class="footer__social-icons">
       <img class="footer__social-icon" src="imgs/icon-twitter.svg" alt="Twitter">
@@ -108,7 +113,7 @@
     <p class="footer__copyright">© Easybank. All Rights Reserved</p>
   </footer>
 
-  <div class="attribution">
+  <div class="attribution container">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Louise Webster</a>.
   </div>
